--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "googleapis": "^27.0.0",
     "node-sass": "^4.9.0",
     "nodemailer": "^4.6.4",
     "path": "^0.12.7",
