--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "googleapis": "^27.0.0",
+    "mailgun-js": "^0.18.0",
     "node-sass": "^4.9.0",
     "nodemailer": "^4.6.4",
     "path": "^0.12.7",
