--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-dom": "^16.3.2",
     "react-icons": "^2.2.7",
     "react-router-dom": "^4.2.2",
-    "webpack": "^4.6.0"
+    "webpack": "^4.6.0",
+    "xoauth2": "^1.2.0"
   },
   "devDependencies": {
     "babel-loader": "^7.1.4",
