--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "googleapis": "^27.0.0",
+    "lodash": "^4.17.10",
     "mailgun-js": "^0.18.0",
     "node-sass": "^4.9.0",
     "nodemailer": "^4.6.4",
@@ -45,11 +46,13 @@
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
+    "mini-css-extract-plugin": "^0.4.0",
     "nodemon": "^1.17.3",
     "postcss-loader": "^2.1.4",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
-    "webpack-cli": "^2.0.15"
+    "webpack-cli": "^2.0.15",
+    "webpack-md5-hash": "0.0.6"
   }
 }
