fixed webpack problems with compiling scss

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-practice",
+  "name": "resume-react-site",
   "version": "1.0.0",
   "description": "",
   "main": "server/lib/index.js",
