--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "googleapis": "^27.0.0",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.10",
     "mailgun-js": "^0.18.0",
     "node-sass": "^4.9.0",
     "nodemailer": "^4.6.4",
     "path": "^0.12.7",
     "react": "^16.3.2",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-icons": "^2.2.7",
     "react-router-dom": "^4.2.2",
