--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.10",
     "mailgun-js": "^0.18.0",
+    "mysql": "^2.15.0",
     "node-sass": "^4.9.0",
     "nodemailer": "^4.6.4",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
