--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "animate.css": "^3.6.1",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
@@ -39,6 +40,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "react": "^16.3.2",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-icons": "^2.2.7",
