--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
+    "devicon": "^2.0.0",
     "express": "^4.16.3",
     "googleapis": "^27.0.0",
     "isomorphic-fetch": "^2.2.1",
@@ -42,9 +43,11 @@
     "react": "^16.3.2",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^0.32.1",
+    "react-devicon": "^0.1.9",
     "react-dom": "^16.3.2",
     "react-icons": "^2.2.7",
     "react-router-dom": "^4.2.2",
+    "react-svg-loader": "^2.1.0",
     "webpack": "^4.6.0",
     "xoauth2": "^1.2.0"
   },
