--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-icons": "^2.2.7",
     "react-router-dom": "^4.2.2",
     "react-svg-loader": "^2.1.0",
+    "svg-react-loader": "^0.4.5",
     "webpack": "^4.6.0",
     "xoauth2": "^1.2.0"
   },
